external-crates/move/crates/move-compiler/tests/move_2024/naming/unbound_var_call.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/naming/unbound_var_call.move:6:9
  │
6 │         fo();
  │         ^^ Unbound function 'fo' in current scope
